# AI-Ish

./: .gitignore  AI-Ish_claude_session_context.txt  AI_ISH_ARCHITECTURE.md  AUDIT_INDEX.md  AUDIT_SUMMARY.txt  BUILD_INSTRUCTIONS.md  COMPREHENSIVE_SUMMARY.md  EXECUTIVE_REVIEW.md  FEATURE_SPECIFICATION.md  GOOGLE_PLAY_LAUNCH_ROADMAP.md  LICENSE  NATIVE_INTEGRATION_GUIDE.md  PRODUCTION_AUDIT_REPORT.md  README.md  START_HERE.md  build-termux.sh  build.gradle.kts  fixes-log.md  gradle.properties  masterplan.md  quick-build.sh  settings.gradle.kts
.github/workflows/: build-apk.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/ishabdullah/aiish/ml/: LLMInferenceEngineIntegrationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gpu_backend.cpp  llm_bridge.cpp  npu_delegate.cpp  whisper_bridge.cpp
app/src/main/cpp/opencl/CL/: cl.h  cl_platform.h
app/src/main/java/com/ishabdullah/aiish/: AiIshApp.kt  MainActivity.kt
app/src/main/java/com/ishabdullah/aiish/audio/: AudioRecorder.kt  ContinuousListeningService.kt  TTSManager.kt  TranscriptionBroadcaster.kt  VoskSTT.kt  WhisperSTT.kt
app/src/main/java/com/ishabdullah/aiish/code/: CodeToolPro.kt
app/src/main/java/com/ishabdullah/aiish/concurrent/: ConcurrentExecutionManager.kt
app/src/main/java/com/ishabdullah/aiish/core/: MetaReasoner.kt  PermissionManager.kt  PrivacyGuard.kt
app/src/main/java/com/ishabdullah/aiish/data/local/: ConversationDao.kt  ConversationDatabase.kt  MessageEntity.kt
app/src/main/java/com/ishabdullah/aiish/data/local/preferences/: PreferencesManager.kt
app/src/main/java/com/ishabdullah/aiish/data/repository/: ChatRepository.kt
app/src/main/java/com/ishabdullah/aiish/device/: DeviceAllocationManager.kt  NPUManager.kt
app/src/main/java/com/ishabdullah/aiish/domain/models/: KnowledgeResult.kt  Message.kt  ModelConfig.kt
app/src/main/java/com/ishabdullah/aiish/embedding/: EmbeddingManager.kt
app/src/main/java/com/ishabdullah/aiish/knowledge/: FetcherRegistry.kt  KnowledgeScout.kt
app/src/main/java/com/ishabdullah/aiish/knowledge/fetchers/: BaseFetcher.kt  CoinGeckoFetcher.kt  OpenMeteoFetcher.kt  WikipediaFetcher.kt
app/src/main/java/com/ishabdullah/aiish/math/: MathReasoner.kt
app/src/main/java/com/ishabdullah/aiish/memory/: MemoryManager.kt
app/src/main/java/com/ishabdullah/aiish/ml/: GPUConfig.kt  GPUManager.kt  LLMInferenceEngine.kt  ModelInfo.kt  ModelManager.kt  PerformanceBenchmark.kt  TokenStreamHandler.kt
app/src/main/java/com/ishabdullah/aiish/ui/components/: PermissionDialog.kt  PreviewDialog.kt
app/src/main/java/com/ishabdullah/aiish/ui/screens/: CameraScreen.kt  ChatScreen.kt  DashboardScreen.kt  ModelDownloadScreen.kt  SettingsScreen.kt
app/src/main/java/com/ishabdullah/aiish/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/ishabdullah/aiish/ui/viewmodels/: CameraViewModel.kt  ChatViewModel.kt  ModelDownloadViewModel.kt
app/src/main/java/com/ishabdullah/aiish/vision/: MultimodalFusion.kt  VisionInferenceEngine.kt  VisionManager.kt  VisionPreprocessor.kt
app/src/main/java/com/ishabdullah/aiish/wake/: WakeWordManager.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/ishabdullah/aiish/ui/viewmodels/: ChatViewModelTest.kt
